@@ -93,3 +93,4 @@ Sep 16 1998	 Count LINK's to get dimension mlnk in seqsiz
 		 Recode pre_mklist to allow and identify multiple node
 		 bonded interactions
 Sep 17 1998	 Add modify commands for bonded interaction parameters
+		 Corrected missing atom algorithm
